# meta

./: README.md  meta-mode.el  meta.org
.github/workflows/: meta-rs.yml
meta/: .gitignore  dev.cljs.edn  figwheel-main.edn  meta.rkt  ndjson.rkt  project.clj  shell.nix  tests.cljs.edn
meta-query/: .envrc  index.js  package-lock.json  package.json  shell.nix
meta-racket/: editor.rkt
meta-racket/meta/: base.rkt  core.rkt  f.rkt
meta-rs/: .envrc  Cargo.toml  flake.nix
meta-rs/meta-core/: Cargo.toml
meta-rs/meta-core/src/: ids.rs  lib.rs
meta-rs/meta-editor/: Cargo.toml
meta-rs/meta-editor/src/: autocomplete.rs  cell_widget.rs  core_layout.rs  doc_view.rs  editor.rs  f_layout.rs  key.rs  layout.rs  lib.rs  reorder_keys.rs
meta-rs/meta-f/: Cargo.toml
meta-rs/meta-f/src/: bytecode.rs  closure_conversion.rs  compile.rs  compiler.rs  cps.rs  cps_to_bytecode.rs  ids.rs  interpret.rs  interpreter.rs  lib.rs  memory.rs  parser.rs  value.rs  vm.rs
meta-rs/meta-f/src/compiler/: closure_conversion.rs  compile.rs  cps_to_bytecode.rs  entry_to_cps.rs  mod.rs
meta-rs/meta-f/src/vm/: bytecode.rs  chunk.rs  machine.rs  memory.rs  mod.rs  value.rs
meta-rs/meta-gui/: Cargo.toml
meta-rs/meta-gui/examples/demo/: main.rs
meta-rs/meta-gui/src/: events.rs  gui.rs  layout.rs  lib.rs  ops.rs  subscriptions.rs
meta-rs/meta-gui/src/widgets/: background.rs  button.rs  center.rs  clickable.rs  column.rs  inset.rs  key.rs  list.rs  mod.rs  row.rs  scrollable.rs  scrollbar.rs  scrolled.rs  scrolled_list.rs  stack.rs  text.rs  translate.rs
meta-rs/meta-pretty/: Cargo.toml
meta-rs/meta-pretty/src/: layout.rs  lib.rs  path.rs  rich_doc.rs  simple_doc.rs
meta-rs/meta-store/: Cargo.toml
meta-rs/meta-store/src/: datom.rs  lib.rs
meta-rs/src/: lib.rs  main.rs  store.rs
meta-rs/src/meta/: core.rs
meta/meta/: base.rkt  core.rkt  f.rkt
meta/resources/public/: index.html
meta/resources/public/css/: index.css
meta/src/meta/: base.clj  base.cljc  core.clj  core.cljc  editor.cljs  f.clj  f.cljc  layout.cljc  main.clj  parse.clj  pathify.cljc  store.cljc
meta/src/meta/editor/: common.cljs  core-pretty.cljs  datoms_view.cljs  entities_view.cljs  f-pretty.cljs  f.cljs  projectional.cljs
meta/src/meta/editor/projectional/: cursor.cljs  pretty.cljs  view.cljs
meta/src/meta/layout/: core.cljc
meta/test/meta/: layout_test.cljc  store_test.cljc  test_runner.cljs
meta/test/meta/layout/: core_test.cljc  test_utils.clj
