[package]
name = "meta"
version = "0.1.0"
authors = ["Alexey Shmalko <rasen.dubi@gmail.com>"]
edition = "2018"

[dependencies]
meta-store = { path = "./meta-store" }
meta-core = { path = "./meta-core" }
meta-editor = { path = "./meta-editor" }
meta-pretty = { path = "./meta-pretty" }

[workspace]
members = [
    "meta-editor",
    "meta-store",
    "meta-pretty",
    "meta-core",
]
