[package]
name = "meta"
version = "0.1.0"
authors = ["Alexey Shmalko <rasen.dubi@gmail.com>"]
edition = "2018"

[dependencies]
env_logger = "^0.7.1"

meta-store = { path = "./meta-store" }
meta-core = { path = "./meta-core" }
meta-editor = { path = "./meta-editor" }
meta-pretty = { path = "./meta-pretty" }

[patch.crates-io]
# https://github.com/mplanchard/cuid-rust/pull/2
cuid = { git = "https://github.com/rasendubi/cuid-rust", branch = "cuid-length" }

[workspace]
members = [
    "meta-editor",
    "meta-store",
    "meta-pretty",
    "meta-core",
    "meta-gui",
]
