[package]
name = "meta"
version = "0.1.0"
authors = ["Alexey Shmalko <rasen.dubi@gmail.com>"]
edition = "2018"

[dependencies]
env_logger = "^0.7.1"

meta-store = { path = "./meta-store" }
meta-core = { path = "./meta-core" }
meta-editor = { path = "./meta-editor" }
meta-pretty = { path = "./meta-pretty" }

[workspace]
members = [
    "meta-editor",
    "meta-store",
    "meta-pretty",
    "meta-core",
    "meta-gui",
]

[profile.dev]
opt-level = 3

[patch.crates-io]
# Use itertools from master to get Itertools::intersperse_with() function
#
# See https://github.com/rust-itertools/itertools/pull/381
itertools = { git = "https://github.com/rust-itertools/itertools.git" }
