[package]
name = "meta-editor"
version = "0.1.0"
authors = ["Alexey Shmalko <rasen.dubi@gmail.com>"]
edition = "2018"

[dependencies]
itertools = "0.9.0"
maplit = "1.0.2"
druid-shell = "^0.6"
log = "^0.4"
im = "15.0.0"

meta-store = { path = "../meta-store" }
meta-core = { path = "../meta-core" }
meta-pretty = { path = "../meta-pretty" }
meta-gui = { path = "../meta-gui" }
