[package]
name = "meta-f"
version = "0.1.0"
authors = ["Alexey Shmalko <rasen.dubi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
im = "15.0.0"
itertools = "0.9.0"
lazy_static = "1.4.0"
log = "^0.4"

meta-core = { path = "../meta-core" }
meta-store = { path = "../meta-store" }

[dev-dependencies]
env_logger = "^0.7.1"
serde_json = "1.0.57"
test-env-log = "0.2.2"
